docs: fix alignment of line number

--- a/docs/src/assets/scss/syntax-highlighter.scss
+++ b/docs/src/assets/scss/syntax-highlighter.scss
@@ -118,6 +118,7 @@ pre[class*="language-"] {
     font-variant-numeric: tabular-nums;
     text-align: right;
     width: 1.2em;
+    line-height: 0;
 }
 
 div[class*="language-"].line-numbers-mode {
